--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,8 @@
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f4f4f4;
 }
 
 .container {
@@ -11,40 +11,69 @@ body {
     background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    text-align: center;
 }
 
 form {
     margin-top: 20px;
 }
 
-label {
-    display: block;
-    margin-bottom: 8px;
-}
-
-button {
-    padding: 10px 15px;
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
+#image-icon {
+    width: 100px;
+    height: 100px;
     cursor: pointer;
 }
 
-button:hover {
-    background-color: #45a049;
+#uploaded-image-title {
+    display: block;
+    margin-top: 5px;
+    font-size: 14px;
 }
 
-.result {
+#no-file-uploaded {
+    display: none;
+    margin-top: 10px;
+    font-size: 16px;
+}
+
+#uploaded-image {
+    display: none;
+    margin-top: 10px;
+    max-width: 100%;
+    max-height: 300px;
+}
+
+#image-preview-container {
+    text-align: center;
     margin-top: 20px;
-    padding: 15px;
-    background-color: #dff0d8;
-    border: 1px solid #d6e9c6;
+}
+
+#uploaded-image {
+    display: none;
+    margin-top: 10px;
+    max-width: 100%;
+    max-height: 300px;
+}
+
+#prediction-result {
+    margin-top: 20px;
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    padding: 10px;
     border-radius: 4px;
 }
 
-.result h2 {
-    margin-top: 0;
-    color: #3c763d;
+button {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+button:hover {
+    background-color: #0056b3;
 }
